@@ -1,11 +1,0 @@
-name    = DZ2
-version = 0.001
-author  = E. Xavier Ample <example@example.org>
-license = Perl_5
-copyright_holder = E. Xavier Ample
-
-[@Classic]
-
-[MetaProvides::Class]
-inherit_version = 1
-inherit_missing = 0
