@@ -1,17 +1,0 @@
-# ABSTRACT: turns baubles into trinkets
-# $Id:$
-use strict;
-use warnings;
-
-use MooseX::Declare;
-
-class DZ2::Mx {
-
-}
-
-class DZ2::Mk {
-
-}
-
-1;
-
