@@ -16,6 +16,7 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
  [Added / test requires]
  - File::Spec
+ - Test::DZil
 
  [Changed / configure recommends]
  - ExtUtils::MakeMaker 6.96 → 6.98
@@ -31,6 +32,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - CPAN::Meta 0 → 2.120900
  - ExtUtils::MakeMaker 6.96 → 6.98
  - Test::More 1.001003 → 1.001006
+
+ [Changed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 0.01000011 → 1.003002
 
  [Removed / develop requires]
  - Dist::Zilla::Plugin::Git::NextVersion::Sanitized
