@@ -5,11 +5,14 @@ Revision history for {{$dist->name}}
  - Dependencies changed since 2.000000, see misc/*.deps* for details
  - configure: ↓1 (recommends: ↑1)
  - develop: +7 ↑2 -3 (suggests: +2 -1)
- - test: +1 -3 (recommends: ↑3 -1)
+ - test: +2 ↑1 -3 (recommends: ↑3 -1)
 
  [Metadata]
  - move repo to kentnl org
  - add copyright holder details
+
+ [Tests]
+ - Internals reimplemented with newer dztest tool
 
 2.000000 2014-05-01T12:15:40Z
  [00 Minor]
